# obex_rs

./: Cargo.toml  README.md
src/: category.rs  lib.rs  obex.rs  object.rs  repository.rs
tests/: get_categories.rs  get_objects.rs  open_obex.rs  setup_obex.rs  update_obex.rs
tests/testing/: mod.rs
